base/utilities/thirteenft/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thirteenft
  namespace: utilities
  labels:
    app.kubernetes.io/name: thirteenft
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: thirteenft
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
